Fix spacing for nav-home

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -12,7 +12,7 @@
             display: inline-block
             font-weight: 300
             font-size: 1.4rem
-            padding: 20px 10px
+            padding: 20px 100px
             text-decoration: none
 
 .nav, .nav-paper
@@ -36,7 +36,7 @@
 
         > .item > .link
             font-size: 2rem
-            padding: 7px 15px
+            padding: 7px 30px
             margin: 0
             border-radius: 4%
             transition: all .4s ease-in-out
